set up header style and add google font

--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
   <title>My Journey Journal</title>
 
   <link rel="stylesheet" href="styles.css">
+
+  <!-- google font-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet">
   <!-- possible favicon addition here -->
 </head>
 <body>
   <header>
-    <img src="https://via.placeholder.com/150x40.png">
+    <img src="https://via.placeholder.com/150x25.png">
     <ul>
       <li><a class="home" href="#">HOME</a></li>
       <li><a class="about-me" href="#">ABOUT ME</a></li>
