set up hero section and add hero img

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h6 class="hero-date">DEC 23, 2022</h6>
       <h1 class="hero-title">My journey as a self-taught frontend dev.</h1>
       <p class="hero-preview">After having taken some courses for learning how to code,
-        I have decided on completely taking the plunge and making a transition into the tech world happen.
+        I have decided on completely making the transition into the tech world happen.
       </p>
     </div>
   </section>
