--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <!-- possible favicon addition here -->
+  
+  <link rel="icon" type="image/x-icon" href="img/favicon.png">
 </head>
 <body>
   <header>
-    <img class="logo" src="https://via.placeholder.com/120x40.png">
+    <img class="logo" src="img/logo.png">
     <ul>
       <li><a class="home" href="#">HOME</a></li>
       <li><a class="about-me" href="#">ABOUT ME</a></li>
