add media queries and grid

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <header>
-    <img class="logo" src="img/logo.png">
+    <img class="logo" src="img/logo.png" href="#">
     <ul>
       <li><a class="home" href="#">HOME</a></li>
       <li><a class="about-me" href="#">ABOUT ME</a></li>
